# aion-json-rpc

./: .gitignore  README.md  build.gradle  settings.gradle
rpc-gen/: .gitignore  README.md  build.gradle
rpc-gen/definitions/: templates
rpc-gen/definitions/spec/: rpc.xml
rpc-gen/definitions/templates/rpc/: java_rpc.ftl  java_rpc_client.ftl  java_test.ftl  java_testUtils.ftl
rpc-lib4j/: .gitignore  README.md  build.gradle
rpc-lib4j/configuration/: configuration.xml
rpc-lib4j/templates/: java_macros.ftl  rust_macros.ftl
rpc-lib4j/templates/errors/: java_exceptions.ftl
rpc-lib4j/templates/rpc/: java_methodNames.ftl  java_rpc.ftl  java_rpc_client.ftl  java_test.ftl  rust_rpc.ftl
rpc-lib4j/templates/types/: java_type_converter.ftl  java_types.ftl
rpc-lib4j/tests/: RPCMethodsTest.java  RPCTestUtilsInterface.java
rpc-lib4r/: .project  Cargo.toml  README.md  build.gradle
rpc-lib4r/configuration/: configuration.xml
rpc-lib4r/src/: main.rs
rpc-lib4r/src/errors/: mod.rs
rpc-lib4r/src/traits/: mod.rs
rpc-lib4r/src/types/: mod.rs  rpc_types_converter.rs
rpc-lib4r/templates/: rust_macros.ftl
rpc-lib4r/templates/errors/: rust_errors.ftl
rpc-lib4r/templates/rpc/: ops.ftl  personal.ftl  rust_rpc.ftl  rust_rpc_client.ftl  rust_test.ftl  rust_testUtils.ftl  stratum.ftl
rpc-lib4r/templates/types/: java_type_converter.ftl  rust_types.ftl
rpc_lib_4_Rust/: Cargo.toml  build.gradle  build.sh
rpc_lib_4_Rust/configuration/: configuration.xml
spec/: README.md  errors.xml  rpc.xml  types.xml
specr/: rpc.xml  types.xml
(+49 files in other folders)
